update gitignore & config files

--- a/notebooks/test_read.ipynb
+++ b/notebooks/test_read.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "59f6e36f",
    "metadata": {},
    "outputs": [],
@@ -60,6 +60,7 @@
     "                        'file_suffix':file.suffix,\n",
     "                        'timestamp': parsed_time\n",
     "                    }\n",
+    "                    print(f\"Parsed time for {filename}: {parsed_time}\")\n",
     "                except ValueError:\n",
     "                    image_metadata_dict[filename] = {\n",
     "                        'img_url': file.as_posix(),\n",
